--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
+
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a class="logo" href="#">
+                    <img class="logo__img" src="images/logo.png" alt="logo icon">
+                </a>
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__list-item">
+                            <a class="menu__list-link menu__list-plus" href="#">Home</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">About</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">Services</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link menu__list-plus" href="#">Pages</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">News</a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="user-nav">
+                    <a class="user-nav__link user-nav__link-search" href="#">
+                        <img class="user-nav__link-img" src="images/icons/search.svg" alt="search">
+                    </a>
+                    
+
+                    <div class="user-nav__link-noted">
+                        <a class="user-nav__link user-nav__link-heart" href="#">
+                            <img class="user-nav__link-img" src="images/icons/heart.svg" alt="heart">
+                            <span class="user-nav__link-num">0</span>
+                        </a>
+                        <a class="user-nav__link user-nav__link-cart" href="#">
+                            <img class="user-nav__link-img" src="images/icons/cart.svg" alt="cart">
+                            <span class="user-nav__link-num">0</span>
+                        </a>
+                 </div>
+
+
+
+                    <a class="user-nav__link user-nav__link-btn" href="#">
+                        <img class="user-nav__link-img" src="images/icons/ellipse.svg" alt="ellipse">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
+
 
 
     <script src="js/main.min.js"></script>
 </body>
+
 </html>
