--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
                     <a class="user-nav__link user-nav__link-search" href="#">
                         <img class="user-nav__link-img" src="images/icons/search.svg" alt="search">
                     </a>
-                    
+
 
                     <div class="user-nav__link-noted">
                         <a class="user-nav__link user-nav__link-heart" href="#">
@@ -53,10 +53,7 @@
                             <img class="user-nav__link-img" src="images/icons/cart.svg" alt="cart">
                             <span class="user-nav__link-num">0</span>
                         </a>
-                 </div>
-
-
-
+                    </div>
                     <a class="user-nav__link user-nav__link-btn" href="#">
                         <img class="user-nav__link-img" src="images/icons/ellipse.svg" alt="ellipse">
                     </a>
@@ -64,6 +61,105 @@
             </div>
         </div>
     </header>
+
+    <main class="main">
+    
+    </main>
+
+    <footer class="footer">
+        <div class="container-inner">
+            <div class="footer-top">
+                <div class="footer-top__contact">
+                    <a class="logo footer-top__logo" href="#">
+                        <img class="logo__img" src="images/logo.png" alt="logo icon">
+                    </a>
+                    <a class="footer-top__address" href="#">
+                        ADDRESS: 4772 Wines Lane
+                        Houston, TX 77032
+                    </a>
+                    <a class="footer-top__phone" href="tel:+8323475843">
+                        Telephone: +832-347-5843
+                    </a>
+                    <a class="footer-top__email" href="mailto:contact@Glee.com">
+                        Email: contact@Glee.com
+                    </a>
+                </div>
+                <div class="footer-top__nav">
+                    <h6 class="footer-top__title">
+                        Services
+                    </h6>
+                    <ul class="footer-top__list">
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">About us</a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">Return Policy</a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">Our Blog</a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">Contact Us</a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">Terms & Condition</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-top__nav">
+                    <h6 class="footer-top__title">
+                        Account
+                    </h6>
+                    <ul class="footer-top__list">
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">Your Account</a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">Checkout</a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">Login</a>
+                        </li>
+                        <li class="footer-top__list-item">
+                            <a class="footer-top__link" href="#">Register</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-top__subscribe">
+                    <h6 class="footer-top__title">
+                        Newsletter
+                    </h6>
+                    <p class="footer-top__text">
+                        Subscribe by our newsletter and get
+                        update protidin.
+                    </p>
+                    <div class="footer-top__form">
+                        <input class="footer-top__form-input" type="text" placeholder="Email address" required>
+                        <button class="footer-top__form-btn" type="submit">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p class="footer-bottom__copy">
+                    ©2020 CopyRight Example. All rights reserved. 
+                </p>
+                <ul class="footer-bottom__list">
+                    <li class="footer-bottom__list-item">
+                        <a class="footer-bottom__link" href="#">Home    </a>
+                    </li>
+                    <li class="footer-bottom__list-item">
+                        <a class="footer-bottom__link" href="#">About    </a>
+                    </li>
+                    <li class="footer-bottom__list-item">
+                        <a class="footer-bottom__link" href="#">Blog    </a>
+                    </li>
+                    <li class="footer-bottom__list-item">
+                        <a class="footer-bottom__link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 
 
