completed slider and design

--- a/app/index.html
+++ b/app/index.html
@@ -179,24 +179,24 @@
                     New Design
                 </h2>
                 <div class="design__filter-btn">
-                    <button class="design__btn">
+                    <button class="design__btn" data-filter="all">
                         All
                     </button>
-                    <button class="design__btn">
+                    <button class="design__btn" data-filter=".categry-a">
                         Furnitures
                     </button>
-                    <button class="design__btn">
+                    <button class="design__btn" data-filter=".categry-b">
                         Chairs
                     </button>
-                    <button class="design__btn">
+                    <button class="design__btn" data-filter=".categry-c">
                         Lighting
                     </button>
-                    <button class="design__btn">
+                    <button class="design__btn" data-filter=".categry-d">
                         Decor
                     </button>
                 </div>
                 <div class="design__items">
-                    <a class="design__item-link">
+                    <a class="design__item-link mix categry-a" style="background-image:url('images/content/design/1.jpg');" href="#">
                         <h5 class="design__item-title">
                             Beat Flat Pendant
                             Black
@@ -205,7 +205,7 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link">
+                    <a class="design__item-link mix categry-a" style="background-image:url('images/content/design/2.jpg');" href="#">
                         <h5 class="design__item-title">
                             Lampe Sur Pieds
                             Bamboo
@@ -214,7 +214,7 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link">
+                    <a class="design__item-link mix categry-a" style="background-image:url('images/content/design/3.jpg');" href="#">
                         <h5 class="design__item-title">
                             Rattan Rocking
                             Chair
@@ -223,7 +223,7 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link">
+                    <a class="design__item-link mix categry-b" style="background-image:url('images/content/design/4.jpg');" href="#">
                         <h5 class="design__item-title">
                             Rattan Rocking
                             Chair
@@ -232,7 +232,7 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link">
+                    <a class="design__item-link mix categry-c" style="background-image:url('images/content/design/5.jpg');" href="#">
                         <h5 class="design__item-title">
                             Rattan Rocking
                             Chair
@@ -241,7 +241,7 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link">
+                    <a class="design__item-link mix categry-d" style="background-image:url('images/content/design/6.jpg');" href="#">
                         <h5 class="design__item-title">
                             Lampe Sur Pieds
                             Bamboo
