added video popup

--- a/app/index.html
+++ b/app/index.html
@@ -196,7 +196,8 @@
                     </button>
                 </div>
                 <div class="design__items">
-                    <a class="design__item-link mix categry-a" style="background-image:url('images/content/design/1.jpg');" href="#">
+                    <a class="design__item-link mix categry-a"
+                        style="background-image:url('images/content/design/1.jpg');" href="#">
                         <h5 class="design__item-title">
                             Beat Flat Pendant
                             Black
@@ -205,7 +206,8 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link mix categry-a" style="background-image:url('images/content/design/2.jpg');" href="#">
+                    <a class="design__item-link mix categry-a"
+                        style="background-image:url('images/content/design/2.jpg');" href="#">
                         <h5 class="design__item-title">
                             Lampe Sur Pieds
                             Bamboo
@@ -214,7 +216,8 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link mix categry-a" style="background-image:url('images/content/design/3.jpg');" href="#">
+                    <a class="design__item-link mix categry-a"
+                        style="background-image:url('images/content/design/3.jpg');" href="#">
                         <h5 class="design__item-title">
                             Rattan Rocking
                             Chair
@@ -223,7 +226,8 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link mix categry-b" style="background-image:url('images/content/design/4.jpg');" href="#">
+                    <a class="design__item-link mix categry-b"
+                        style="background-image:url('images/content/design/4.jpg');" href="#">
                         <h5 class="design__item-title">
                             Rattan Rocking
                             Chair
@@ -232,7 +236,8 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link mix categry-c" style="background-image:url('images/content/design/5.jpg');" href="#">
+                    <a class="design__item-link mix categry-c"
+                        style="background-image:url('images/content/design/5.jpg');" href="#">
                         <h5 class="design__item-title">
                             Rattan Rocking
                             Chair
@@ -241,7 +246,8 @@
                             Classic
                         </p>
                     </a>
-                    <a class="design__item-link mix categry-d" style="background-image:url('images/content/design/6.jpg');" href="#">
+                    <a class="design__item-link mix categry-d"
+                        style="background-image:url('images/content/design/6.jpg');" href="#">
                         <h5 class="design__item-title">
                             Lampe Sur Pieds
                             Bamboo
@@ -251,6 +257,13 @@
                         </p>
                     </a>
                 </div>
+            </div>
+        </section>
+        <section class="video" style="background-image: url('images/video-bg.jpg');">
+            <div class="container-inner">
+                <a class="video__play-link" data-fancybox href="https://www.youtube.com/watch?v=9uOMectkCCs&ab_channel=TED">
+                    <img class="video__play-icon" src="images/icons/play-btn.png" alt="video play">
+                </a>
             </div>
         </section>
     </main>
