--- a/app/index.html
+++ b/app/index.html
@@ -196,7 +196,7 @@
                     </button>
                 </div>
                 <div class="product__items">
-                    <div class="product-item mix categry-1" >
+                    <div class="product-item mix categry-1">
                         <!-- Будет еще использоваться на сайте -->
                         <div class="product-item__img-box">
                             <img class="product-item__images" src="images/products/1.jpg" alt="product image">
@@ -473,6 +473,41 @@
             </div>
         </section>
 
+        <div class="lamp">
+            <div class="container">
+                <div class="lamp__inner">
+                    <div class="lamp__item">
+                        <img class="lamp__image" src="images/lamp/1.png" alt="lamp">
+                        <div class="lamp__content">
+                            <h5 class="lamp__title">
+                                Mirum Notare Tellus
+                            </h5>
+                            <p class="lamp__text">
+                                LEDCornBulb Lamp 5W 7W 10W 12W 15W E26 E27LEDCornLight
+                            </p>
+                            <a href="" class="lamp__link">
+                                View More <span class="arrow lamp__arrow"></span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="lamp__item">
+                        <img class="lamp__image" src="images/lamp/2.png" alt="lamp">
+                        <div class="lamp__content">
+                            <h5 class="lamp__title">
+                                Malesuada Tempor
+                                Euismod
+                            </h5>
+                            <p class="lamp__text">
+                                50W 8000lm Compact Size for HID StreetLightReplacementLEDCornLight
+                            </p>
+                            <a href="" class="lamp__link">
+                                View More <span class="arrow lamp__arrow"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
@@ -570,6 +605,71 @@
                 </a>
             </div>
         </section>
+        <section class="blog">
+            <div class="container-inner">
+                <div class="blog__header">
+                    <h2 class="blog__title title">Our Insights & Articles</h2>
+                    <a class="blog__more" href="#">
+                        View All
+                    </a>
+                </div>
+                <div class="blog__items">
+                    <div class="blog__item">
+                        <a class="blog__img-link" href="#">
+                            <img class="blog__img" src="images/blog/1.jpg" alt="blog image">
+                        </a>
+                        <div class="blog__content">
+                            <a class="blog__text" href="#">
+                                Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                            </a>
+                            <div class="blog__info">
+                                <div class="blog__date">28 JANUARY, 2020</div>
+                                <a class="blog__author" href="#">BY ADMIN</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <a class="blog__img-link" href="#">
+                            <img class="blog__img" src="images/blog/2.jpg" alt="blog image">
+                        </a>
+                        <div class="blog__content">
+                            <a class="blog__text" href="#">
+                                Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            </a>
+                            <div class="blog__info">
+                                <div class="blog__date">28 JANUARY, 2020</div>
+                                <a class="blog__author" href="#">BY ADMIN</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog__item">
+                        <a class="blog__img-link" href="#">
+                            <img class="blog__img" src="images/blog/3.jpg" alt="blog image">
+                        </a>
+                        <div class="blog__content">
+                            <a class="blog__text" href="#">
+                                Rncididunt ut labore et dolore magna aliqua. Ut enim
+                            </a>
+                            <div class="blog__info">
+                                <div class="blog__date">28 JANUARY, 2020</div>
+                                <a class="blog__author" href="#">BY ADMIN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="partners">
+            <div class="container-inner">
+                <div class="partners__items">
+                    <img class="partners__img" src="images/partners/1.png" alt="partner logo">
+                    <img class="partners__img" src="images/partners/2.png" alt="partner logo">
+                    <img class="partners__img" src="images/partners/3.png" alt="partner logo">
+                    <img class="partners__img" src="images/partners/4.png" alt="partner logo">
+                    <img class="partners__img" src="images/partners/5.png" alt="partner logo">
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
