--- a/app/index.html
+++ b/app/index.html
@@ -615,7 +615,7 @@
                 </div>
                 <div class="blog__items">
                     <div class="blog__item">
-                        <a class="blog__img-link" href="#">
+                        <a class="blog__img-link blog__img-link--new" href="#">
                             <img class="blog__img" src="images/blog/1.jpg" alt="blog image">
                         </a>
                         <div class="blog__content">
@@ -629,7 +629,7 @@
                         </div>
                     </div>
                     <div class="blog__item">
-                        <a class="blog__img-link" href="#">
+                        <a class="blog__img-link blog__img-link--new" href="#">
                             <img class="blog__img" src="images/blog/2.jpg" alt="blog image">
                         </a>
                         <div class="blog__content">
@@ -643,7 +643,7 @@
                         </div>
                     </div>
                     <div class="blog__item">
-                        <a class="blog__img-link" href="#">
+                        <a class="blog__img-link blog__img-link--new" href="#">
                             <img class="blog__img" src="images/blog/3.jpg" alt="blog image">
                         </a>
                         <div class="blog__content">
