create breadcrumps and rewrite partners

--- a/app/index.html
+++ b/app/index.html
@@ -659,7 +659,7 @@
                 </div>
             </div>
         </section>
-        <div class="partners">
+        <div class="partners main-page__partners">
             <div class="container-inner">
                 <div class="partners__items">
                     <img class="partners__img" src="images/partners/1.png" alt="partner logo">
