--- a/app/page.html
+++ b/app/page.html
@@ -63,7 +63,36 @@
     </header>
 
     <main class="main">
-    
+        <section class="top">
+            <div class="container-inner">
+                <h2 class="top__title">Log in</h2>
+                <div class="breadcrumbs">
+                    <ul class="breadcrumbs__list">
+                        <li class="breadcrumbs__item">
+                            <a class="breadcrumbs__link" href="#">
+                                Home
+                            </a>
+                        </li>
+                        <li class="breadcrumbs__item">
+                            <a class="breadcrumbs__link" href="#">
+                                Log in
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <div class="partners">
+            <div class="container-inner">
+                <div class="partners__items">
+                    <img class="partners__img" src="images/partners/1.png" alt="partner logo">
+                    <img class="partners__img" src="images/partners/2.png" alt="partner logo">
+                    <img class="partners__img" src="images/partners/3.png" alt="partner logo">
+                    <img class="partners__img" src="images/partners/4.png" alt="partner logo">
+                    <img class="partners__img" src="images/partners/5.png" alt="partner logo">
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
@@ -141,17 +170,17 @@
             </div>
             <div class="footer-bottom">
                 <p class="footer-bottom__copy">
-                    ©2020 CopyRight Example. All rights reserved. 
+                    ©2020 CopyRight Example. All rights reserved.
                 </p>
                 <ul class="footer-bottom__list">
                     <li class="footer-bottom__list-item">
-                        <a class="footer-bottom__link" href="#">Home    </a>
+                        <a class="footer-bottom__link" href="#">Home </a>
                     </li>
                     <li class="footer-bottom__list-item">
-                        <a class="footer-bottom__link" href="#">About    </a>
+                        <a class="footer-bottom__link" href="#">About </a>
                     </li>
                     <li class="footer-bottom__list-item">
-                        <a class="footer-bottom__link" href="#">Blog    </a>
+                        <a class="footer-bottom__link" href="#">Blog </a>
                     </li>
                     <li class="footer-bottom__list-item">
                         <a class="footer-bottom__link" href="#">Contact</a>
