--- a/app/index.html
+++ b/app/index.html
@@ -178,20 +178,20 @@
                 <h2 class="title">
                     Products of the week
                 </h2>
-                <div class="filter">
-                    <button class="filter__btn product__btn" data-filter="all">
+                <div class="slider-filter">
+                    <button class="slider-filter__btn product__btn" data-filter="all">
                         All
                     </button>
-                    <button class="filter__btn product__btn" data-filter=".categry-1">
+                    <button class="slider-filter__btn product__btn" data-filter=".categry-1">
                         Furnitures
                     </button>
-                    <button class="filter__btn product__btn" data-filter=".categry-2">
+                    <button class="slider-filter__btn product__btn" data-filter=".categry-2">
                         Chairs
                     </button>
-                    <button class="filter__btn product__btn" data-filter=".categry-3">
+                    <button class="slider-filter__btn product__btn" data-filter=".categry-3">
                         Lighting
                     </button>
-                    <button class="filter__btn product__btn" data-filter=".categry-4">
+                    <button class="slider-filter__btn product__btn" data-filter=".categry-4">
                         Decor
                     </button>
                 </div>
@@ -516,20 +516,20 @@
                 <h2 class="title">
                     New Design
                 </h2>
-                <div class="filter">
-                    <button class="filter__btn design__btn" data-filter="all">
+                <div class="slider-filter">
+                    <button class="slider-filter__btn design__btn" data-filter="all">
                         All
                     </button>
-                    <button class="filter__btn design__btn" data-filter=".categry-a">
+                    <button class="slider-filter__btn design__btn" data-filter=".categry-a">
                         Furnitures
                     </button>
-                    <button class="filter__btn design__btn" data-filter=".categry-b">
+                    <button class="slider-filter__btn design__btn" data-filter=".categry-b">
                         Chairs
                     </button>
-                    <button class="filter__btn design__btn" data-filter=".categry-c">
+                    <button class="slider-filter__btn design__btn" data-filter=".categry-c">
                         Lighting
                     </button>
-                    <button class="filter__btn design__btn" data-filter=".categry-d">
+                    <button class="slider-filter__btn design__btn" data-filter=".categry-d">
                         Decor
                     </button>
                 </div>
