--- a/app/product-list.html
+++ b/app/product-list.html
@@ -87,26 +87,110 @@
                 <div class="product__inner">
 
                     <div class="filter">
+                        <div class="filter-category filter__item">
+                            <h3 class="filter__title">CATEGORY</h3>
+                            <form class="filter-category__form" action="#">
+                                <label class="filter-category__label">
+                                    <input class="filter-category__input" type="checkbox">
+                                    <div class="filter-category__checkbox">
+                                        <span>Chair</span>
+                                        <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                            alt="arrow">
+                                    </div>
+                                </label>
+                                <label class="filter-category__label">
+                                    <input class="filter-category__input" type="checkbox">
+                                    <div class="filter-category__checkbox">
+                                        <span>Table</span>
+                                        <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                            alt="arrow">
+                                    </div>
+                                </label>
+                                <label class="filter-category__label">
+                                    <input class="filter-category__input" type="checkbox">
+                                    <div class="filter-category__checkbox">
+                                        <span>Lamp</span>
+                                        <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                            alt="arrow">
+                                    </div>
+                                </label>
+                                <label class="filter-category__label">
+                                    <input class="filter-category__input" type="checkbox">
+                                    <div class="filter-category__checkbox">
+                                        <span>Watch</span>
+                                        <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                            alt="arrow">
+                                    </div>
+                                </label>
+                                <label class="filter-category__label">
+                                    <input class="filter-category__input" type="checkbox">
+                                    <div class="filter-category__checkbox">
+                                        <span>Clock</span>
+                                        <img class="filter-category__img" src="images/icons/arrow-right.svg"
+                                            alt="arrow">
+                                    </div>
+                                </label>
+                            </form>
+                        </div>
+
                         <div class="filter-price filter__item">
                             <h3 class="filter__title">PRICE</h3>
                             <form class="filter-price__form" action="#">
-                                <input class="filter-price__input" type="text"
-                                data-step="0.01" 
-                                data-min="0." 
-                                data-max="1000"
-                                data-from="100" 
-                                data-to="500">
+                                <input class="filter-price__input" type="text" data-step="0.01" data-min="0."
+                                    data-max="1000" data-from="100" data-to="500">
                             </form>
                             <div class="filter-price__range">
                                 <div class="filter-price__from"></div>
                                 <div class="filter-price__to"></div>
                             </div>
                         </div>
+
+                        <div class="filter-brand filter__item">
+                            <h3 class="filter__title">BRAND</h3>
+                            <form class="filter-brand__form" action="#">
+                                <label class="filter-brand__label">
+                                    <input class="filter-brand__input" type="checkbox">
+                                    <div class="filter-brand__checkbox">
+                                        <span>RFL</span>
+                                        <span class="filter-brand__text">(10)</span>
+                                    </div>
+                                </label>
+                                <label class="filter-brand__label">
+                                    <input class="filter-brand__input" type="checkbox">
+                                    <div class="filter-brand__checkbox">
+                                        <span>Brothers</span>
+                                        <span class="filter-brand__text">(21)</span>
+                                    </div>
+                                </label>
+                                <label class="filter-brand__label">
+                                    <input class="filter-brand__input" type="checkbox">
+                                    <div class="filter-brand__checkbox">
+                                        <span>Regal</span>
+                                        <span class="filter-brand__text">(3)</span>
+                                    </div>
+                                </label>
+                                <label class="filter-brand__label">
+                                    <input class="filter-brand__input" type="checkbox">
+                                    <div class="filter-brand__checkbox">
+                                        <span>Nadia</span>
+                                        <span class="filter-brand__text">(14)</span>
+                                    </div>
+                                </label>
+                                <label class="filter-brand__label">
+                                    <input class="filter-brand__input" type="checkbox">
+                                    <div class="filter-brand__checkbox">
+                                        <span>Otobi</span>
+                                        <span class="filter-brand__text">(6)</span>
+                                    </div>
+                                </label>
+                            </form>
+                        </div>
                     </div>
-
-                    <div class="content"></div>
-
                 </div>
+
+                <div class="content"></div>
+
+            </div>
             </div>
         </section>
 
