completed product list, fix bugs

--- a/app/index.html
+++ b/app/index.html
@@ -223,13 +223,26 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden radio
-                        </h4>
-                        <div class="product-item__price">
-                            $29.00
+                        <div class="product-item__descr">
+                            <h4 class="product-item__title">
+                                Wooden radio
+                            </h4>
+                            <div class="product-item__star" data-rateyo-rating="4"></div>
+                            <div class="product-item__price">
+                                $29.00
+                            </div>
+                            <p class="product-item__text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            </p>
+                            <button class="product-item__btn" type="submit">Add to cart</button>
                         </div>
                     </div>
+
+
+
+
+
                     <div class="product-item mix categry-1">
                         <!-- Будет еще использоваться на сайте -->
                         <div class="product-item__img-box">
@@ -257,13 +270,23 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden radio
-                        </h4>
-                        <div class="product-item__price">
-                            $29.00
+                        <div class="product-item__descr">
+                            <h4 class="product-item__title">
+                                Wooden radio
+                            </h4>
+                            <div class="product-item__star" data-rateyo-rating="4"></div>
+                            <div class="product-item__price">
+                                $29.00
+                            </div>
+                            <p class="product-item__text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            </p>
+                            <button class="product-item__btn" type="submit">Add to cart</button>
                         </div>
                     </div>
+
+
                     <div class="product-item mix categry-2">
                         <!-- Будет еще использоваться на сайте -->
                         <div class="product-item__img-box">
@@ -291,13 +314,23 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden radio
-                        </h4>
-                        <div class="product-item__price">
-                            $29.00
+                        <div class="product-item__descr">
+                            <h4 class="product-item__title">
+                                Wooden radio
+                            </h4>
+                            <div class="product-item__star" data-rateyo-rating="4"></div>
+                            <div class="product-item__price">
+                                $29.00
+                            </div>
+                            <p class="product-item__text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            </p>
+                            <button class="product-item__btn" type="submit">Add to cart</button>
                         </div>
                     </div>
+
+
                     <div class="product-item mix categry-1">
                         <!-- Будет еще использоваться на сайте -->
                         <div class="product-item__img-box">
@@ -325,13 +358,23 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden radio
-                        </h4>
-                        <div class="product-item__price">
-                            $29.00
+                        <div class="product-item__descr">
+                            <h4 class="product-item__title">
+                                Wooden radio
+                            </h4>
+                            <div class="product-item__star" data-rateyo-rating="4"></div>
+                            <div class="product-item__price">
+                                $29.00
+                            </div>
+                            <p class="product-item__text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            </p>
+                            <button class="product-item__btn" type="submit">Add to cart</button>
                         </div>
                     </div>
+
+
                     <div class="product-item mix categry-2">
                         <!-- Будет еще использоваться на сайте -->
                         <div class="product-item__img-box">
@@ -359,13 +402,23 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden radio
-                        </h4>
-                        <div class="product-item__price">
-                            $29.00
+                        <div class="product-item__descr">
+                            <h4 class="product-item__title">
+                                Wooden radio
+                            </h4>
+                            <div class="product-item__star" data-rateyo-rating="4"></div>
+                            <div class="product-item__price">
+                                $29.00
+                            </div>
+                            <p class="product-item__text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            </p>
+                            <button class="product-item__btn" type="submit">Add to cart</button>
                         </div>
                     </div>
+
+
                     <div class="product-item mix categry-3">
                         <!-- Будет еще использоваться на сайте -->
                         <div class="product-item__img-box">
@@ -393,13 +446,22 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden radio
-                        </h4>
-                        <div class="product-item__price">
-                            $29.00
+                        <div class="product-item__descr">
+                            <h4 class="product-item__title">
+                                Wooden radio
+                            </h4>
+                            <div class="product-item__star" data-rateyo-rating="4"></div>
+                            <div class="product-item__price">
+                                $29.00
+                            </div>
+                            <p class="product-item__text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            </p>
+                            <button class="product-item__btn" type="submit">Add to cart</button>
                         </div>
                     </div>
+
                     <div class="product-item mix categry-3">
                         <!-- Будет еще использоваться на сайте -->
                         <div class="product-item__img-box">
@@ -427,13 +489,23 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden radio
-                        </h4>
-                        <div class="product-item__price">
-                            $29.00
+                        <div class="product-item__descr">
+                            <h4 class="product-item__title">
+                                Wooden radio
+                            </h4>
+                            <div class="product-item__star" data-rateyo-rating="4"></div>
+                            <div class="product-item__price">
+                                $29.00
+                            </div>
+                            <p class="product-item__text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            </p>
+                            <button class="product-item__btn" type="submit">Add to cart</button>
                         </div>
                     </div>
+
+
                     <div class="product-item mix categry-4">
                         <!-- Будет еще использоваться на сайте -->
                         <div class="product-item__img-box">
@@ -461,11 +533,19 @@
                                 </a>
                             </div>
                         </div>
-                        <h4 class="product-item__title">
-                            Wooden radio
-                        </h4>
-                        <div class="product-item__price">
-                            $29.00
+                        <div class="product-item__descr">
+                            <h4 class="product-item__title">
+                                Wooden radio
+                            </h4>
+                            <div class="product-item__star" data-rateyo-rating="4"></div>
+                            <div class="product-item__price">
+                                $29.00
+                            </div>
+                            <p class="product-item__text">
+                                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            </p>
+                            <button class="product-item__btn" type="submit">Add to cart</button>
                         </div>
                     </div>
 
@@ -485,7 +565,7 @@
                             <p class="lamp__text">
                                 LEDCornBulb Lamp 5W 7W 10W 12W 15W E26 E27LEDCornLight
                             </p>
-                            <a href="" class="lamp__link">
+                            <a href="#" class="lamp__link">
                                 View More <span class="arrow lamp__arrow"></span>
                             </a>
                         </div>
@@ -500,7 +580,7 @@
                             <p class="lamp__text">
                                 50W 8000lm Compact Size for HID StreetLightReplacementLEDCornLight
                             </p>
-                            <a href="" class="lamp__link">
+                            <a href="#" class="lamp__link">
                                 View More <span class="arrow lamp__arrow"></span>
                             </a>
                         </div>
