finish product details and product lists

--- a/app/product-list.html
+++ b/app/product-list.html
@@ -892,10 +892,10 @@
                         Subscribe by our newsletter and get
                         update protidin.
                     </p>
-                    <div class="footer-top__form">
+                    <form class="footer-top__form">
                         <input class="footer-top__form-input" type="text" placeholder="Email address" required>
                         <button class="footer-top__form-btn" type="submit">Subscribe</button>
-                    </div>
+                    </form>
                 </div>
             </div>
             <div class="footer-bottom">
