--- a/app/terms&conditions.html
+++ b/app/terms&conditions.html
@@ -170,7 +170,6 @@
             </div>
         </div>
     </main>
-
     <footer class="footer">
         <div class="container-inner">
             <div class="footer-top">
@@ -238,10 +237,10 @@
                         Subscribe by our newsletter and get
                         update protidin.
                     </p>
-                    <div class="footer-top__form">
+                    <form class="footer-top__form">
                         <input class="footer-top__form-input" type="text" placeholder="Email address" required>
                         <button class="footer-top__form-btn" type="submit">Subscribe</button>
-                    </div>
+                    </form>
                 </div>
             </div>
             <div class="footer-bottom">
