--- a/app/product-list-2.html
+++ b/app/product-list-2.html
@@ -260,7 +260,7 @@
                                     <h4 class="product-item__title">
                                         Wooden radio
                                     </h4>
-                                    <div class="product-item__star" data-rateyo-rating="4"></div>
+                                    <div class="star" data-rateyo-rating="4"></div>
                                     <div class="product-item__price">
                                         $29.00
                                     </div>
@@ -302,7 +302,7 @@
                                     <h4 class="product-item__title">
                                         Wooden chair
                                     </h4>
-                                    <div class="product-item__star" data-rateyo-rating="4"></div>
+                                    <div class="star" data-rateyo-rating="4"></div>
                                     <div class="product-item__price">
                                         $29.00
                                     </div>
@@ -344,7 +344,7 @@
                                     <h4 class="product-item__title">
                                         Pendant lamp
                                     </h4>
-                                    <div class="product-item__star" data-rateyo-rating="4"></div>
+                                    <div class="star" data-rateyo-rating="4"></div>
                                     <div class="product-item__price">
                                         $29.00
                                     </div>
@@ -386,7 +386,7 @@
                                     <h4 class="product-item__title">
                                         Retro table
                                     </h4>
-                                    <div class="product-item__star" data-rateyo-rating="4"></div>
+                                    <div class="star" data-rateyo-rating="4"></div>
                                     <div class="product-item__price">
                                         $29.00
                                     </div>
